argocd/identity-server/az-sg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-server
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: identity-server
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          volumeMounts:
            - name: certs
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: certs
          hostPath:
            path: /home/leoyang/certs/deepin.app
            type: Directory
